--- a/src/frontEnd/index.html
+++ b/src/frontEnd/index.html
@@ -7,5 +7,7 @@
     <script defer src="renderer.js"></script>
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    WElcome
+  </body>
 </html>
