--- a/src/frontEnd/index.html
+++ b/src/frontEnd/index.html
@@ -9,5 +9,9 @@
   </head>
   <body>
     WElcome
+
+    <div id="closeAllWin">Click to closeAllWin</div>
+    <div id="">Nothing here</div>
+    <div id="startScrape">Click to start Scrape</div>
   </body>
 </html>
